--- a/style.css
+++ b/style.css
@@ -68,13 +68,13 @@
 .sidenav {
 	grid-area: sidenav;
 	/*background-color: lightgreen;*/
-	justify-self: center;
+	/*justify-self: center;*/
 	display: flex;
 	flex-direction: column;
-	justify-content: start;
-	align-items: start;
+	justify-content: center;
+	align-items: center;
 	/*padding-top: 50px;*/
-	margin-left: 45px;
+	/*margin-left: 45px;*/
 	/*justify-content: space-evenly;*/
 }
 
@@ -127,8 +127,8 @@ header li {
 }
 
 .info {
-	margin-top: 75px;
-	margin-bottom: 25px;
+	/*background-color: red;*/
+	padding: 40px;
 }
 
 .name {
@@ -140,7 +140,8 @@ header li {
 }
 
 .navcontainer {
-	
+	/*background-color: pink;*/
+	margin-top: 35px;	
 }
 
 .navbox {
